--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 		  <hr>
 
 
-		  <table align=center width=720px>
+		  <table id="download" align=center width=720px>
 			<center><h1>Download</h1></center>
 			<tr>
 				<td width=300px>
@@ -621,16 +621,20 @@
 		 <br><br>
 		 <hr>
 
-		 <table align=center width=480px>
+		 <table align=center width=720px>
 			<center><h1>Paper</h1></center>
 			   <tr>
-				   <!--<td width=300px align=left>-->
-				   <!-- <a href="http://arxiv.org/pdf/1603.08511.pdf"> -->
-				 <td align=center><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/images/paper_pdf_thumb.png"/></a></td>
+				 <td align=center><a href=""><img class="layered-paper-big" style="height:160px" src="./resources/images/paper_pdf_thumb.png"/></a></td>
 				 <td><span style="font-size:14pt">Shao, Zhao, Dai, Lin.<br>
 				 FineGym: A Hierarchical Video Dataset for Fine-grained Action Understanding<br>
 				 In CVPR, 2020 (oral).<br>
 				 (<a href="https://arxiv.org/abs/2004.06704">arXiv</a>)</a>
+				 <span style="font-size:4pt"><a href=""><br></a>
+				 </span>
+				 </td>
+				 <td align=center><a href=""><img class="layered-paper-big" style="height:160px" src="./resources/images/supp_pdf_thumb.png"/></a></td>
+				 <td><span style="font-size:14pt">
+				 (<a href="resources/supp.pdf">Additional details/<br>supplementary materials</a>)</a>
 				 <span style="font-size:4pt"><a href=""><br></a>
 				 </span>
 				 </td>
