add dataset request survey

--- a/index.html
+++ b/index.html
@@ -490,8 +490,12 @@
 				(Thanks <a href='https://kennymckormick.github.io/'>Haodong Duan</a> for pointing this out.)<br>
 				[16/04/2020] We include new subsections to track updates and address FAQs.<br>
 				<center><h2> FAQs </h2></center>
-				Q1: Is the event-/element-level instance in your dataset cut in integral seconds?<br>
-				A1: No. All levels of instances (actions and sub-actions) are annotated in <i>exact</i> timestamp (milliseconds) 
+				Q1: Some links are invalid on YouTube. How can I obtain the missing videos?<br>
+				Q1': I am located in mainland China and I cannot access YouTube. How can I get the dataset?<br>
+				A1: Please submit a Google form at <a href='https://forms.gle/z8iTwRhdMsfRCNkm7'>this link</a>.
+				We may reach you shortly.<br>
+				Q2: Is the event-/element-level instance in your dataset cut in integral seconds?<br>
+				A2: No. All levels of instances (actions and sub-actions) are annotated in <i>exact</i> timestamp (milliseconds) 
 				in a pursuit of frame-level preciseness.
 				The number in the identifier is derived from integral seconds due to conciseness.
 				Please refer to the instructions below for details.
