--- a/index.html
+++ b/index.html
@@ -452,10 +452,10 @@
 						<br>
 						<img class="rounded" onmouseover="this.src='./resources/images/dataset_icon.jpg';" onmouseout="this.src='./resources/images/dataset_icon.jpg';" src = "./resources/images/dataset_icon.jpg" height = "150px"><br><br>
 						<span style="font-size:16px"><a href='resources/dataset/finegym_glabel_to_Qtree.json'>question annotation (json)</a></span><br>
+						<span style="font-size:16px"><a href='resources/dataset/set_categories.txt'>set-level category list (txt)</a></span><br>
 						<span style="font-size:16px"><a href='resources/dataset/gym99_categories.txt'>Gym99 category list (txt)</a></span><br>
 						<span style="font-size:16px"><a href='resources/dataset/gym288_categories.txt'>Gym288 category list (txt)</a></span><br>
 						<span style="font-size:16px"><a href='resources/dataset/gym530_categories.txt'>Gym530 category list (txt)</a></span><br>
-						<br>
 					<span style="font-size:16px"></span>
 					</center>
 				</td>
@@ -490,6 +490,8 @@
 				(Thanks <a href='https://kennymckormick.github.io/'>Haodong Duan</a> for pointing this out.)<br>
 				[16/04/2020] We include new subsections to track updates and address FAQs.<br>
 				<center><h2> FAQs </h2></center>
+				Q0: License issue:<br>
+				A0: The annotations of FineGym are copyright by us and published under the Creative Commons Attribution-NonCommercial 4.0 International License.<br>
 				Q1: Some links are invalid on YouTube. How can I obtain the missing videos?<br>
 				Q1': I am located in mainland China and I cannot access YouTube. How can I get the dataset?<br>
 				A1: Please submit a Google form at <a href='https://forms.gle/z8iTwRhdMsfRCNkm7'>this link</a>.
