Add contact information

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ year={2020}
 				<td width=400px>
 				  <left>
 			<center><h1>Contact</h1></center>
-			For further questions and suggestions, please contact Dian Shao (<a href='mailto:sd017@ie.cuhk.edu.hk'>sd017@ie.cuhk.edu.hk</a>).
+			For further questions and suggestions, please contact Dian Shao (<a href='mailto:sd017@ie.cuhk.edu.hk'>sd017@ie.cuhk.edu.hk</a>) or Zhenzhi Wang (<a href='mailto:wz122@ie.cuhk.edu.hk'>wz122@ie.cuhk.edu.hk</a>).
 			
 			
 		</left>
